Add lfs configuration to .gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -24,3 +24,8 @@
 	gpgSign = true
 [includeIf "gitdir:/Users/"]
 	path=~/.gitconfig-mac
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
