--- a/.gitconfig
+++ b/.gitconfig
@@ -15,6 +15,8 @@
     	unhide = update-index --no-assume-unchanged
 	cm = commit -m
 	cb = checkout -b
+	wip = !git add -A && git commit -m 'WIP'
+	back = reset --soft HEAD~
 [core]
 	excludesfile = ~/.gitignore
 	fileMode = false
