--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ bind P paste-buffer
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
-set-option -s set-clipboard off
+set-option -s set-clipboard on
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
 
 run '~/.tmux/plugins/tpm/tpm'
