--- a/.gitconfig
+++ b/.gitconfig
@@ -3,15 +3,16 @@
 [user]
 	name = Faiz Surani
 	email = faiz.surani@gmail.com
-	signingkey = C26623C031CA07D5
 [alias]
 	st = status
 	br = branch
         l = log --oneline -n 10
+        f = fetch
 	amend = commit --amend --no-edit
         edit = commit --amend
         rb = rebase
-        rbl = "!f() { git rebase -i HEAD~$1; }; f"
+        rbm = rebase -i origin/HEAD
+        rbn = "!f() { git rebase -i HEAD~$1; }; f"
 	rbi = rebase -i
 	rbc = rebase --continue
         rba = rebase --abort
@@ -20,14 +21,17 @@
 	cpa = cherry-pick --abort
 	hide = update-index --assume-unchanged
     	unhide = update-index --no-assume-unchanged
-	cm = commit
+	cm = commit -m
 	cb = checkout -b
+	co = checkout
 	wip = !git add -A && git commit -m 'WIP'
 	back = reset --soft HEAD~
         gimme = !git fetch && git reset --hard @{u}
         shove = push --set-upstream origin HEAD
         dfs = diff --staged
+        p = push
         pf = push -f
+        fix = commit -m "fixup"
 [core]
 	excludesfile = ~/.gitignore
 	fileMode = false
