--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,12 +7,15 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 set-window-option -g mode-keys vi
 
-bind P paste-buffer
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
-bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
-set-option -s set-clipboard on
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
+#bind P paste-buffer
+#bind-key -T copy-mode-vi v send-keys -X begin-selection
+#bind-key -T copy-mode-vi y send-keys -X copy-selection
+#bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+#set-option -s set-clipboard on
+# bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
+
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+
 
 run '~/.tmux/plugins/tpm/tpm'
 
