--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ venv/
 node_modules/
 *.swp
 __pycache__/
-.DS_Store
 *.egg-info/
 *.DotSettings.user
 .ipynb_checkpoints/
-
+*.DS_Store
+*.tsbuildinfo
